fixed issue with code on mobile
code section was not formatting correctly on mobile and forcing the size to be desktop scale. Made code snippet div scale with viewport size. Cleaned up comments

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -7,7 +7,7 @@ html,body{
     overflow-x: hidden;
 }
 html{
-    height: 100%
+    height: 100%;
 }
 .main-header{
     padding: 10px 20px;
@@ -48,19 +48,7 @@ h3{
     float: right;
     margin-left: 15px;
 }
-@media only screen and (max-width: 900px) {
-    .project-image, .project-image-right {
-        float: none;
-        width: 90%;
-        margin-left: 15px;
-    }
-    .writeup-image{
-        width: 90%;
-    }
-    .article-image{
-        width: 90% !important;
-    }
-}
+
 .project-row{
     padding-bottom: 20px;
 }
@@ -74,10 +62,6 @@ h3{
 }
 .contact-footer{
     padding: 20px 0px 20px 20px;
-    margin-bottom: 0px;
-    border-bottom: 0px;
-    bottom: 0;
-    /* height: 100%; */
     background-color: #371e30;
     color: white;
     overflow: hidden;
@@ -92,7 +76,7 @@ h3{
     width:  90%;
 }
 .table{
-    width: 100%;
+    width: 97%;
 }
 .table-title{
     text-align: center;
@@ -100,7 +84,6 @@ h3{
 }
 .snippet{
     color: white;
-    /* color: #9cdcfe; */
     background-color: #1e1e1e;
     padding: 5px 1px 1px 5px;
     border: 5px solid #371e30;
@@ -108,5 +91,21 @@ h3{
 }
 .comment{
     color: #894a77;
-    /* color: #92ac3c; */
+}
+
+@media only screen and (max-width: 900px) {
+    .project-image, .project-image-right {
+        float: none;
+        width: 90%;
+        margin-left: 15px;
+    }
+    .writeup-image{
+        width: 90%;
+    }
+    .article-image{
+        width: 90%;
+    }
+    .snippet{
+        width: 100vw;
+    }
 }
